# python-songs

./: .env.example  .gitignore  README.md  main.py  main.spec  makefile  pyproject.toml
config/: config.py  gesture_mappings.py  sounds.py
docs/: ARCHITECTURE.md  VISUAL_GUIDE.md  executavel.md
scripts/: verify.py
src/: __init__.py
src/core/: __init__.py  app.py
src/domain/: __init__.py  interfaces.py  models.py
src/game/: __init__.py  challenge_manager.py
src/services/: camera_service.py  gesture_service.py  hand_tracking_service.py  sound_service.py
src/ui/: __init__.py  renderer.py  styles.py
src/ui/components/: __init__.py  challenge_panel.py  gesture_guide.py  result_popup.py  stats_panel.py
tests/: conftest.py
tests/unit/: test_challenge_manager.py  test_models.py
