[project]
name = "python-keys"
version = "0.1.0"
description = "Um simulador de piano interativo que usa visão computacional (OpenCV)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mediapipe>=0.10.21",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "pygame>=2.6.1",
    "pyinstaller>=6.17.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
